[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/Scenes/World/background.png" type="Texture" id=2]
[ext_resource path="res://src/Objects/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scenes/Menu/start.png" type="Texture" id=4]
[ext_resource path="res://src/Scenes/Menu/options.png" type="Texture" id=5]
[ext_resource path="res://src/Scenes/Menu/exit.png" type="Texture" id=6]
[ext_resource path="res://src/Scenes/Menu/yes.png" type="Texture" id=7]
[ext_resource path="res://src/Scenes/Menu/no.png" type="Texture" id=8]
[ext_resource path="res://src/Resources/font.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://src/Scenes/Menu/close.png" type="Texture" id=10]
[ext_resource path="res://src/Scenes/Menu/arrow.png" type="Texture" id=11]
[ext_resource path="res://src/Objects/MeleEnemy/sprite.png" type="Texture" id=12]
[ext_resource path="res://src/Objects/RangedEnemy/sprite.png" type="Texture" id=13]
[ext_resource path="res://src/Objects/LaserEnemy/sprite.png" type="Texture" id=14]
[ext_resource path="res://src/Objects/HPPickup/sprite.png" type="Texture" id=15]
[ext_resource path="res://src/Objects/ShrinkStop/sprite.png" type="Texture" id=16]
[ext_resource path="res://src/Scenes/Menu/move_info.png" type="Texture" id=17]
[ext_resource path="res://src/Scenes/Menu/aim_info.png" type="Texture" id=18]
[ext_resource path="res://src/Scenes/Menu/dash_info.png" type="Texture" id=19]
[ext_resource path="res://src/Scenes/Menu/mute_sound_info.png" type="Texture" id=20]
[ext_resource path="res://src/Scenes/Menu/mute_music_info.png" type="Texture" id=21]
[ext_resource path="res://src/Scenes/Menu/menu_music.wav" type="AudioStream" id=22]

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 85, 30 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 36, 22 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 36, 22 )

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu" type="Node" index="0"]

script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="." index="0"]

scale = Vector2( 1440, 1440 )
z_index = -10
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="Player" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 360, 528 )

[node name="WALLS" type="StaticBody2D" parent="." index="2"]

position = Vector2( 376, 648 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WALLS" index="0"]

build_mode = 0
polygon = PoolVector2Array( 16, -648, 1064, -648, 1064, 792, -376, 792, -376, -648, 16, -648, 16, -688, -416, -688, -416, 832, 1104, 832, 1104, -688, 16, -688 )

[node name="Camera" type="Camera2D" parent="." index="3"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Editor", "Transform" ]

[node name="Container" type="Control" parent="." index="4"]

modulate = Color( 0.601563, 0.601563, 0.601563, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -360.0
margin_right = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Start" type="TextureButton" parent="Container" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -130.0
margin_right = -222.0
margin_bottom = -118.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="StartArea" type="Area2D" parent="Container" index="1" groups=[
"Menu",
]]

editor/display_folded = true
position = Vector2( 9, 80 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/StartArea" index="0"]

shape = SubResource( 6 )

[node name="Options" type="TextureButton" parent="Container" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -298.0
margin_right = -46.0
margin_bottom = -286.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="OptionsArea" type="Area2D" parent="Container" index="3" groups=[
"Menu",
]]

editor/display_folded = true
position = Vector2( 185, -88 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/OptionsArea" index="0"]

shape = SubResource( 6 )

[node name="Exit" type="TextureButton" parent="Container" index="4"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 88.0
margin_top = -130.0
margin_right = 122.0
margin_bottom = -118.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ExitArea" type="Area2D" parent="Container" index="5" groups=[
"Menu",
]]

editor/display_folded = true
position = Vector2( 353, 80 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/ExitArea" index="0"]

shape = SubResource( 6 )

[node name="ExitPropmt" type="Panel" parent="Container" index="6"]

editor/display_folded = true
visible = false
self_modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 89.0
margin_top = -95.0
margin_right = 259.0
margin_bottom = -15.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Yes" type="TextureButton" parent="Container/ExitPropmt" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 48.0
margin_right = 58.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="YesArea" type="Area2D" parent="Container/ExitPropmt" index="1" groups=[
"Menu",
]]

position = Vector2( 59, 60 )
scale = Vector2( 0.5, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/ExitPropmt/YesArea" index="0"]

position = Vector2( -2, -2 )
shape = SubResource( 7 )

[node name="No" type="TextureButton" parent="Container/ExitPropmt" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 88.0
margin_top = 48.0
margin_right = 106.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="NoArea" type="Area2D" parent="Container/ExitPropmt" index="3" groups=[
"Menu",
]]

position = Vector2( 106, 60 )
scale = Vector2( 0.5, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Container/ExitPropmt/NoArea" index="0"]

position = Vector2( 0, -2 )
shape = SubResource( 8 )

[node name="Label" type="Label" parent="Container/ExitPropmt" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 170.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Quit?"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="OptionPanel" type="Panel" parent="Container" index="7"]

editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -70.0
margin_right = 90.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Close" type="TextureButton" parent="Container/OptionPanel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 7.0
margin_bottom = 7.0
rect_scale = Vector2( 5, 5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Arrow2" type="Sprite" parent="Container" index="8"]

position = Vector2( 602.207, 649.966 )
rotation = 1.5708
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="Info1" type="Control" parent="Container" index="9"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 900.0
margin_bottom = 360.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Sprite1" type="Sprite" parent="Container/Info1" index="0"]

visible = false
position = Vector2( 36, 44 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="Info1" type="Label" parent="Container/Info1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 24.0
margin_right = 356.0
margin_bottom = 294.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "The circle around you
is shrinking.

Kill the enemies
with dashing.

Killing an enemy gives combo points.

Every 5th combo point makes the circle grow.

Missing a dash or
running out of time
resets the combo."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Info2" type="Control" parent="Container" index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 720.0
margin_right = 900.0
margin_bottom = 1080.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Sprite1" type="Sprite" parent="Container/Info2" index="0"]

position = Vector2( 34, 82 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]

[node name="Info1" type="Label" parent="Container/Info2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 62.0
margin_right = 266.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "If it gets too close, it will hurt you."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Sprite2" type="Sprite" parent="Container/Info2" index="2"]

position = Vector2( 34, 146 )
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]

[node name="Info2" type="Label" parent="Container/Info2" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 118.0
margin_right = 266.0
margin_bottom = 199.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "It's shooting at you and doesn't come too close."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Sprite3" type="Sprite" parent="Container/Info2" index="4"]

position = Vector2( 34, 218 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )
_sections_unfolded = [ "Transform" ]

[node name="Info3" type="Label" parent="Container/Info2" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 198.0
margin_right = 266.0
margin_bottom = 237.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "It shoots lazers and it's unkillable."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Sprite4" type="Sprite" parent="Container/Info2" index="6"]

position = Vector2( 34, 278 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Transform" ]

[node name="Info4" type="Label" parent="Container/Info2" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 258.0
margin_right = 266.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Heals you when picked up."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Sprite5" type="Sprite" parent="Container/Info2" index="8"]

position = Vector2( 34, 334 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]

[node name="Info5" type="Label" parent="Container/Info2" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 314.0
margin_right = 266.0
margin_bottom = 353.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Stops the circle from shrinking."
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TextStuff" type="Control" parent="Container" index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="move_info" type="Sprite" parent="Container/TextStuff" index="0"]

position = Vector2( -89, 643 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 17 )
_sections_unfolded = [ "Transform" ]

[node name="aim_info" type="Sprite" parent="Container/TextStuff" index="1"]

position = Vector2( 444, 643 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 18 )
_sections_unfolded = [ "Transform" ]

[node name="dash_info" type="Sprite" parent="Container/TextStuff" index="2"]

position = Vector2( 183, 668 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 19 )
_sections_unfolded = [ "Transform" ]

[node name="sound_info" type="Sprite" parent="Container/TextStuff" index="3"]

position = Vector2( 4, 484 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 20 )
_sections_unfolded = [ "Transform" ]

[node name="music_info" type="Sprite" parent="Container/TextStuff" index="4"]

position = Vector2( 372, 484 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 21 )
_sections_unfolded = [ "Transform" ]

[node name="arrowtext" type="Label" parent="Container/TextStuff" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 294.0
margin_top = 282.0
margin_right = 466.0
margin_bottom = 357.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Go here!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Arrow" type="Sprite" parent="Container/TextStuff" index="6"]

position = Vector2( 462, 330 )
scale = Vector2( 5, 5 )
z_index = -5
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="Container/TextStuff" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -180.0
margin_top = 162.0
margin_right = 540.0
margin_bottom = 237.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Hit a button to begin"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Label2" type="Label" parent="Container/TextStuff" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -180.0
margin_top = 968.0
margin_right = 540.0
margin_bottom = 1043.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Nothing here
Move on :P"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CheckButton" type="CheckButton" parent="." index="5"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 128.0
margin_top = 248.0
margin_right = 204.0
margin_bottom = 288.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Menu" type="Label" parent="CheckButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = -32.0
margin_right = 88.0
margin_bottom = 4.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Menu"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 22 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Music"

[node name="LostPanel" type="Panel" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -24.0
margin_top = -136.0
margin_right = 16.0
margin_bottom = -96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[connection signal="button_down" from="Container/Start" to="." method="_on_Start_button_down"]

[connection signal="button_down" from="Container/Options" to="." method="_on_Options_button_down"]

[connection signal="button_down" from="Container/Exit" to="." method="_on_Exit_button_down"]

[connection signal="button_down" from="Container/ExitPropmt/Yes" to="." method="_on_Yes_button_down"]

[connection signal="button_down" from="Container/ExitPropmt/No" to="." method="_on_No_button_down"]

[connection signal="button_down" from="Container/OptionPanel/Close" to="." method="_on_Close_button_down"]

[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]


